--- a/site/src/app.html
+++ b/site/src/app.html
@@ -5,8 +5,12 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.halo.min.js"></script>
 	</head>
 	<body>
 		<div>%sveltekit.body%</div>
 	</body>
+	<script></script>
 </html>
