--- a/site/src/app.html
+++ b/site/src/app.html
@@ -9,6 +9,10 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
 		<meta name="theme-color" content="#ffffff" />
+		<meta
+			property="og:image"
+			content="https://cdn.raster.app/blockchain-at-georgia-tech/Sb4iAtiu4B?ixlib=js-3.6.0&s=ef4c765f8a020ebbb89567b2d2d73076"
+		/>
 		%sveltekit.head%
 	</head>
 	<body>
