--- a/site/src/app.html
+++ b/site/src/app.html
@@ -14,6 +14,17 @@
 			content="https://cdn.raster.app/blockchain-at-georgia-tech/Sb4iAtiu4B?ixlib=js-3.6.0&s=ef4c765f8a020ebbb89567b2d2d73076"
 		/>
 		%sveltekit.head%
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-6DSQWZZ8ZZ"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-6DSQWZZ8ZZ');
+		</script>
 	</head>
 	<body>
 		%sveltekit.body%
